# ZigClaw-Ai

./: .gitignore  ARCHIVE-v3.0.md  AUDIT_RESPONSE.md  CHANGELOG.md  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  RELEASES.md  RELEASE_NOTES.md  SECURITY_AND_PERF_REPORT.md  ZigClaw 妥协版.md  build.zig  config.yaml  docker-compose.yml  setup-branch-protection.sh  test_server.py  zigclaw-4-22编译清单.md  zigclaw文档.md  任务.md
crates/bitclaw-server/: Cargo.toml  build.rs
crates/bitclaw-server/src/: main.rs
deploy/: README.md
docs/: EXECUTION_LAYER.md  architecture-analysis.md  architecture.md  audit-execution-layer.md  changelog_atomic_migration.md  ci_code_review.md  corrections.md  deployment.md  index.md  military_rules.md  phases.md  pitfalls.md  storage-layer.md
phase0/: CHECKPOINT.md
scripts/: ci_check.sh  generate_certs.sh
src/: _test_while.zig  _verify_errdefer.zig  async_coordinator.zig  cache_layer.zig  comptime_router.zig  connection_pool.zig  constants.zig  context.zig  core.zig  fault_injection.zig  feedback.zig  feedback_engine.zig  file_store.zig  heat_pool.zig  heat_snap.zig  http_client.zig  http_log.zig  http_protocol.zig  http_server.zig  http_server_mt.zig  ibus.zig  image_feature.c  image_feature.h  inference.zig  inference_client.zig  integration_p10.zig  integration_p11.zig  integration_p12.zig  integration_p13.zig  integration_p14.zig  integration_p15.zig  integration_p16.zig  integration_p17.zig  integration_p18.zig  integration_p19.zig  integration_p20.zig  integration_p21.zig  integration_p22.zig  integration_p23.zig  integration_p24.zig  (+66 more)
(+55 files in other folders)
